# NovelAI-api-client

./: .env  .gitignore  AGENT.md  CLAUDE.md  anlas.bundle.js  anlas_calculator.html  anlas_cost_calculation_analysis.md  anlas_investigation_report.md  novelai_tokenizer.py  novelai_tokenizer.ts  package.json  test.ts
.jules/: sentinel.md
api/: .gitignore  20251215_231647.naiv4vibe  __init__.py  charref_payload.json  debug_charref_payload.json  example_unified_client.py  example_vibe_generate.py  extract_context.js  extract_formula.py  genarete_payload.json  inspect_params.py  inspect_schema.py  jjjj.naiv4vibe  jjjj.naiv4vibe:mshield  models.py  pyproject.toml  request.json  test.py  test_clip_tokenizer.py  test_dns.py  test_token_count.py  validation_spec.yaml  vibe_transfer.py  えのきっぷ1.naiv4vibe  漆黒の性王.naiv4vibe
api/novelai/: README.md  __init__.py  client.py  conftest.py  constants.py  dataclasses.py  models.py  test_api_integration.py  test_validation.py  utils.py
api/old/: novelai_client.py
api/vibes/: 890bc110faa4_20251228_172917.naiv4vibe
api/vibes/test.naiv4vibe/: 890bc110faa4_20251229_195810.naiv4vibe
danbooru_content/: artist_name.txt
docs/: api-protocol.md
novelAI_offecial_folder/: anlus_consumption.txt  augment_analizer.txt  charactor_ref_analize.txt  urls.txt  (+9 more)
rust-api/: CLAUDE.md  CODE_REVIEW.md  Cargo.toml  plan.md
rust-api/docs/: anlas-cost-calculation.md  api-protocol.md  api-reference.md  architecture.md  getting-started.md  tokenizer-internals.md
rust-api/examples/: example.rs  example_augment.rs  example_infill.rs  example_tokenizer.rs  test_validation.rs
rust-api/src/: anlas.rs  constants.rs  error.rs  lib.rs
rust-api/src/client/: mod.rs  payload.rs  response.rs  retry.rs
rust-api/src/schemas/: builder.rs  mod.rs  types.rs  validation.rs
rust-api/src/tokenizer/: cache.rs  clip.rs  mod.rs  preprocess.rs  t5.rs
rust-api/src/utils/: charref.rs  image.rs  mask.rs  mod.rs  vibe.rs
rust-api/tests/: anlas_test.rs  client_test.rs  constants_test.rs  schemas_test.rs  tokenizer_test.rs  utils_test.rs
rust-api/vibes/: input1.naiv4vibe
(+171 files in other folders)
