[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "novelai-sdk>=0.2.3",
    "httpx>=0.27.0",
    "msgpack>=1.1.2",
    "transformers>=4.57.3",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
]

[project.scripts]
api = "api:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
