[package]
name = "novelai-api"
version = "0.1.0"
edition = "2021"
description = "NovelAI image generation API client library"
license = "MIT"

[features]
default = []

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Image processing
image = "0.25"

# Base64
base64 = "0.22"

# SHA256
sha2 = "0.10"

# Regex
regex = "1"

# Tokenizer
lru = "0.12"
html-escape = "0.2"
unicode-normalization = "0.1"
url = "2"

# Network / Async
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["sync", "fs"] }
flate2 = "1"

# Random
rand = "0.8"

# ZIP parsing
zip = "2"

# MessagePack
rmpv = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mockito = "1"
serial_test = "3"
image = "0.25"
zip = "2"
rmpv = "1"
base64 = "0.22"
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
